<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PolimueveT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_portada">Portada</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_busqueda">Busqueda</string>
    <string name="title_activity_trayectos">Trayectos</string>
    <string name="title_activity_trip_detail">TripDetail</string>
    <string name="title_activity_addtrip">Addtrip</string>
    <string name="title_activity_http_new_trip">HttpNewTrip</string>
    <string name="title_activity_http_login">HttpLogin</string>

    <string name="busqueda_hoy">Hoy</string>
    <string name="busqueda_manyana">Mañana</string>
    <string name="busqueda_noresults">No se han encontrado trayectos para la búsqueda realizada</string>
    
    <string name="trip_informacion">Información</string>
    <string name="trip_restricciones">Restricciones</string>
    <string name="trip_tipo_pasajero">Tipo de Pasajero</string>
    <string name="conexion_internet">Activa tu conexión a internet</string>
    
    <!-- Opciones Restricciones -->
    <string name="no_fumadores">No Fumadores</string>
    <string name="no_comida">No Comida</string>
    <string name="no_animales">No Animales</string>
    
    <!-- Tipos Pasajero -->
    <string name="alumno">Alumnos</string>
    <string name="profesores">Profesores</string>
    <string name="personal">Personal</string>
    
    <string name="observaciones">Observaciones</string>
    
</resources>
